tests/assembler/fail/duplicate_label.tal
|0100
@label
    #12
@label
    #34
